Bug 1521891 - portrait images in list items should leave whitespace on sides to fill out 72x72 box (#4702)

--- a/content-src/components/DiscoveryStreamComponents/List/_List.scss
+++ b/content-src/components/DiscoveryStreamComponents/List/_List.scss
@@ -134,13 +134,16 @@ $item-line-height: 20;
   }
 
   .ds-list-image {
-    display: none;
-    width: 72px;
-    height: 72px;
-    object-fit: cover;
+    $image-size: 72px;
 
+    border-radius: 4px;
     border: 0.5px solid $black-12;
     box-sizing: border-box;
-    border-radius: 4px;
+    display: none;
+    height: $image-size;
+    min-height: $image-size;
+    min-width: $image-size;
+    object-fit: cover;
+    width: $image-size;
   }
 }
